--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <section class="hero">
     <h2>Ensuring Academic Integrity</h2>
     <p>
-      Experience a secure, proctored, and AI-free testing environment through the California State University system. Our innovative platform 
+      Experience a secure, proctored, and AI-free testing environment through the California State University system whether online or at any of our 23 campuses or additional partner sites. Our innovative platform 
       ensures fairness and integrity in every assessment.
     </p>
     <div class="cta-buttons">
